--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2,3 +2,15 @@
     width: 80%;
     margin: 20px auto;
 }
+
+.text-center {
+    text-align: center !important;
+}
+
+.text-justify {
+    text-align: justify !important;
+}
+
+.hidden {
+    display: none;
+}
